# security-passport

./: .env.example  .gitignore  README.md  compose.prod.yml  compose.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 00012914f2d7_job_runs_add_idempotency_key.py  06b0821216ab_evidence_items.py  14a3f725d795_default_uuid_for_tenant_overrides_id.py  1a4a954f40d2_evidence_freshness_and_traceability.py  1af399055691_evidence_metadata.py  2c1e5575bdcb_merge_heads_after_share_links_evidence_.py  42d3982ba451_job_runs_idempotency_unique_index.py  4c42a8852573_job_runs_add_started_at.py  54ac86ee0748_job_runs.py  66ba4fbb7646_job_runs_export_output_fields.py  7c1407a5008b_core_tables.py  ae3852e415da_create_questionnaire_tables_for_fresh_db.py  cc805d395fee_evidence_metadata.py  e6c8a35c310a_share_links.py  f16f92d60d86_add_tenant_overrides_settings.py  f2c67de42b2c_evidence_lifecycle_fields.py
apps/api/app/: main.py  worker.py
apps/api/app/api/: activity.py  audit.py  evidence.py  evidence_freshness.py  exports.py  freshness.py  health.py  ops.py  ops_config.py  ops_extra.py  passport.py  questionnaires.py  schemas.py  share_links.py  tenant_overrides.py  tenant_settings.py  version.py
apps/api/app/cli/: freshness_scan.py  run_periodic_scheduler.py
apps/api/app/core/: audit.py  auth.py  http_middleware.py  log_context.py  logging.py  queue.py  rate_limit.py  security.py  security_headers.py  sentry_context.py  settings.py  storage.py  tenant_overrides.py
apps/api/app/db/: base.py  session.py
deploy/: Caddyfile
(+51 files in other folders)
